# rust-pacman

./: Cargo.toml  README.md  log
spinning/: square.rs
src/: controler.rs  main.rs  pacman.rs  view.rs
src/pacman/: ghost.rs  map.rs
