[package]
name = "rust-gaem"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"

[[bin]]
name = "spinning-square"
path = "spinning/square.rs"

[[bin]]
name = "pac"
path = "src/main.rs"

[dependencies]
piston = "0.53"
piston2d-graphics = "0.39"
pistoncore-glutin_window = "0.68"
piston2d-opengl_graphics = "0.77"
rand = "0.8"
piston-texture = "0.8"
piston_window = "0.118"
